# pkg/api/internal/testing.go
@@ -131,6 +131,20 @@ func GetAccounts(handler http.Handler, query url.Values) *httptest.ResponseRecor
 	return rec
 }
 
+func GetBalances(handler http.Handler, query url.Values) *httptest.ResponseRecorder {
+	req, rec := NewRequest(http.MethodGet, "/"+testingLedger+"/balances", nil)
+	req.URL.RawQuery = query.Encode()
+	handler.ServeHTTP(rec, req)
+	return rec
+}
+
+func GetBalancesAggregated(handler http.Handler, query url.Values) *httptest.ResponseRecorder {
+	req, rec := NewRequest(http.MethodGet, "/"+testingLedger+"/aggregate/balances", nil)
+	req.URL.RawQuery = query.Encode()
+	handler.ServeHTTP(rec, req)
+	return rec
+}
+
 func GetAccount(handler http.Handler, addr string) *httptest.ResponseRecorder {
 	req, rec := NewRequest(http.MethodGet, "/"+testingLedger+"/accounts/"+addr, nil)
 	handler.ServeHTTP(rec, req)
